# gn

./: README.md  meson.build
src/: main.c
src/comn/: gn_chck_cmdl_args.c  gn_close.c  gn_close_serv_socks.c  gn_htbl_dump.c  gn_htbl_free.c  gn_htbl_hash.c  gn_htbl_init.c  gn_htbl_insr.c  gn_htbl_item_init.c  gn_htbl_srch.c  gn_ipc_close.c  gn_ipc_open.c  gn_prse_cmdl_args.c  gn_serv_sock_list_pop.c  gn_serv_sock_list_pop_front.c  gn_serv_sock_list_push_back.c  gn_set_sig_hndlr.c  gn_sleep_ms.c  gn_str_deinit.c  gn_str_del.c  gn_str_init.c  gn_str_lshift.c  gn_str_new.c  main.c
src/comn/include/: gn_chck_cmdl_args.h  gn_close.h  gn_close_serv_socks.h  gn_htbl_dump.h  gn_htbl_free.h  gn_htbl_hash.h  gn_htbl_init.h  gn_htbl_insr.h  gn_htbl_item_init.h  gn_htbl_item_t.h  gn_htbl_srch.h  gn_htbl_t.h  gn_ipc_close.h  gn_ipc_open.h  gn_prse_cmdl_args.h  gn_serv_sock_list_pop.h  gn_serv_sock_list_pop_front.h  gn_serv_sock_list_push_back.h  gn_serv_sock_list_t.h  gn_serv_sock_t.h  gn_set_sig_hndlr.h  gn_sleep_ms.h  gn_str_deinit.h  gn_str_del.h  gn_str_err_e.h  gn_str_init.h  gn_str_lshift.h  gn_str_new.h  gn_str_t.h  main.h
src/mstr/: gn_ipc_acpt.c  gn_ipc_bind.c  gn_ipc_lstn.c  gn_ipc_prep.c  gn_load_mstr_conf.c  gn_load_vhsts_conf.c  gn_mstr_init.c  gn_mstr_main.c  gn_open_serv_sock.c  gn_self_path.c  gn_send_serv_sock.c  gn_start_wrkr.c  gn_start_wrkrs.c  gn_stop_wrkrs.c  gn_vhst_conf_list_pop.c  gn_vhst_conf_list_pop_front.c  gn_wrkr_data_list_pop.c  gn_wrkr_data_list_push_back.c  gn_wrkr_data_list_remove.c
src/mstr/include/: gn_ipc_acpt.h  gn_ipc_bind.h  gn_ipc_lstn.h  gn_ipc_prep.h  gn_load_mstr_conf.h  gn_load_vhsts_conf.h  gn_mstr_conf_t.h  gn_mstr_init.h  gn_mstr_main.h  gn_open_serv_sock.h  gn_self_path.h  gn_send_serv_sock.h  gn_start_wrkr.h  gn_start_wrkrs.h  gn_stop_wrkrs.h  gn_vhst_conf_list_pop_front.h  gn_vhst_conf_list_t.h  gn_vhst_conf_t.h  gn_wrkr_data_list_pop.h  gn_wrkr_data_list_push_back.h  gn_wrkr_data_list_remove.h  gn_wrkr_data_list_t.h  gn_wrkr_data_t.h
src/wrkr/: gn_acpt_conn.c  gn_acpt_conns.c  gn_close_conn.c  gn_conn_acpt_thrd.c  gn_conn_acpt_thrd_data_list_push_back.c  gn_conn_acpt_thrd_data_list_remove.c  gn_conn_list_push_back.c  gn_conn_list_remove.c  gn_conn_mgmt_thrd.c  gn_conn_mgmt_thrd_data_list_push_back.c  gn_conn_mgmt_thrd_data_list_remove.c  gn_extr_hdrn.c  gn_extr_hdrv.c  gn_extr_mthd.c  gn_extr_prot.c  gn_extr_uri.c  gn_fcgi_conn.c  gn_free_conn.c  gn_get_new_conns.c  gn_ipc_conn.c  gn_open_file.c  gn_process_conn.c  gn_recv_data.c  gn_recv_serv_sock.c  gn_recv_serv_socks.c  gn_send_data.c  gn_send_file.c  gn_start_conn_acpt_thrds.c  gn_start_conn_mgmt_thrds.c  gn_stop_conn_acpt_thrds.c  gn_stop_conn_mgmt_thrds.c  gn_writ_hdrs.c  gn_wrkr_init.c  gn_wrkr_main.c
src/wrkr/include/: gn_acpt_conn.h  gn_acpt_conns.h  gn_close_conn.h  gn_conn_acpt_thrd.h  gn_conn_acpt_thrd_data_list_push_back.h  gn_conn_acpt_thrd_data_list_remove.h  gn_conn_acpt_thrd_data_list_t.h  gn_conn_acpt_thrd_data_t.h  gn_conn_acpt_thrd_state_e.h  gn_conn_list_push_back.h  gn_conn_list_remove.h  gn_conn_list_t.h  gn_conn_mgmt_thrd.h  gn_conn_mgmt_thrd_data_list_push_back.h  gn_conn_mgmt_thrd_data_list_remove.h  gn_conn_mgmt_thrd_data_list_t.h  gn_conn_mgmt_thrd_data_t.h  gn_conn_mgmt_thrd_state_e.h  gn_conn_step_e.h  gn_conn_t.h  gn_extr_hdrn.h  gn_extr_hdrv.h  gn_extr_mthd.h  gn_extr_prot.h  gn_extr_uri.h  gn_fcgi_conn.h  gn_free_conn.h  gn_get_new_conns.h  gn_ipc_conn.h  gn_open_file.h  gn_process_conn.h  gn_recv_data.h  gn_recv_serv_sock.h  gn_recv_serv_socks.h  gn_send_data.h  gn_send_file.h  gn_start_conn_acpt_thrds.h  gn_start_conn_mgmt_thrds.h  gn_stop_conn_acpt_thrds.h  gn_stop_conn_mgmt_thrds.h  (+3 more)
